...

    var displayName: String {
        switch self {
        case .ghosttyDefault:
            "Ghostty Default"
        case .remuxDark:
            "Catppuccin Mocha"
        case .remuxLight:
            "Catppuccin Latte"
        }
    }

    var pickerTitle: String {
        switch self {
        case .ghosttyDefault:
            "Default"
        case .remuxDark:
            "Mocha"
        case .remuxLight:
            "Latte"
        }
    }

    var ghosttyConfigLines: [String] {
        switch self {
        case .ghosttyDefault:
...
